; ModuleID = '/home/carl/AnghaBench/lab/q3map2/common/extr_cmdlib.c_safe_malloc_info.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/common/extr_cmdlib.c_safe_malloc_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [49 x i8] c"%s: safe_malloc failed on allocation of %i bytes\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @safe_malloc_info(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i8* @calloc(i64 %6, i32 1)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @Error(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i8* %11, i64 %12)
  br label %14

14:                                               ; preds = %10, %2
  %15 = load i8*, i8** %5, align 8
  ret i8* %15
}

declare dso_local i8* @calloc(i64, i32) #1

declare dso_local i32 @Error(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
